// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangelogVersion > renders with actions slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="footer" class="mt-5">
      <!--v-if-->Actions slot
    </div>
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
</section>"
`;

exports[`ChangelogVersion > renders with authors correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="footer" class="mt-5">
      <div data-slot="authors" class="">
        <div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="benjamincanac" data-slot="image"></span>
          <div data-slot="wrapper" class="">
            <!--v-if-->
            <p data-slot="name" class="">Benjamin Canac</p>
            <p data-slot="description" class="">benjamincanac</p>
          </div>
        </div>
      </div>
    </div>
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with authors slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="footer" class="mt-5">
      <div data-slot="authors" class="">Authors slot</div>
    </div>
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with badge correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
        <!--v-if--></span>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with badge object correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
        <!--v-if--></span>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with badge slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <div data-slot="meta" class="">Badge slot
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with body slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->Body slot
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with class correctly 1`] = `
"<article data-slot="root" class="absolute">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with date correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class=""><time datetime="2025-01-01T00:00:00.000Z" data-slot="date" class="">Jan 1, 2025</time>
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <div data-slot="meta" class="lg:hidden">
        <!--v-if--><time datetime="2025-01-01T00:00:00.000Z" data-slot="date" class="lg:hidden">Jan 1, 2025</time>
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with date slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <div data-slot="meta" class="lg:hidden">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with description correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="description" class="">Description</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with description slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="description" class="">Description slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with description slot correctly 2`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="description" class="">Description slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with footer slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="footer" class="mt-5">Footer slot</div>
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with header slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">Header slot</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with image correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-slot="imageWrapper" class=""><img src="https://picsum.photos/640/360" data-slot="image">
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with image slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-slot="imageWrapper" class="">Image slot
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with indicator slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">Indicator slot</div>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with title correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <h2 data-slot="title" class="">
        <!--v-if-->Title
      </h2>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with title slot correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <h2 data-slot="title" class="">
        <!--v-if-->Title slot
      </h2>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with title slot correctly 2`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <h2 data-slot="title" class="">
        <!--v-if-->Title slot
      </h2>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with to & image correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <div data-slot="header" class="">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-slot="imageWrapper" class=""><img src="https://picsum.photos/640/360" data-slot="image"><a href="/changelog" aria-label="Version link" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a></div>
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with to correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders with ui correctly 1`] = `
"<article data-slot="root" class="">
  <div data-slot="indicator" class="">
    <!--v-if-->
    <div data-slot="dot" class="">
      <div data-slot="dotInner" class=""></div>
    </div>
  </div>
  <div data-slot="container" class="max-w-xl">
    <!--v-if-->
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChangelogVersion > renders without indicator correctly 1`] = `
"<article data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
</article>"
`;
